@@ -193,3 +193,44 @@ allow = $! $/
 #[ValuesAndExpressions::RequireConstantOnLeftSideOfEquality]
 #[ValuesAndExpressions::RestrictLongStrings]
 
+### Perl::Critic::Pulp
+[CodeLayout::ProhibitFatCommaNewline]
+[CodeLayout::ProhibitIfIfSameLine]
+[CodeLayout::RequireFinalSemicolon]
+#[CodeLayout::RequireTrailingCommaAtNewline]
+[Compatibility::ConstantLeadingUnderscore]
+[Compatibility::ConstantPragmaHash]
+[Compatibility::Gtk2Constants]
+[Compatibility::PerlMinimumVersionAndWhy]
+#[Compatibility::PodMinimumVersion]
+[Compatibility::ProhibitUnixDevNull]
+[Documentation::ProhibitAdjacentLinks]
+[Documentation::ProhibitBadAproposMarkup]
+[Documentation::ProhibitDuplicateHeadings]
+[Documentation::ProhibitDuplicateSeeAlso]
+[Documentation::ProhibitLinkToSelf]
+[Documentation::ProhibitParagraphEndComma]
+[Documentation::ProhibitParagraphTwoDots]
+[Documentation::ProhibitUnbalancedParens]
+[Documentation::ProhibitVerbatimMarkup]
+[Documentation::RequireEndBeforeLastPod]
+[Documentation::RequireFilenameMarkup]
+[Documentation::RequireFinalCut]
+[Documentation::RequireLinkedURLs]
+[Miscellanea::TextDomainPlaceholders]
+[Miscellanea::TextDomainUnused]
+[Modules::ProhibitModuleShebang]
+[Modules::ProhibitPOSIXimport]
+[Modules::ProhibitUseQuotedVersion]
+[ValuesAndExpressions::ConstantBeforeLt]
+[ValuesAndExpressions::NotWithCompare]
+[ValuesAndExpressions::ProhibitArrayAssignAref]
+[ValuesAndExpressions::ProhibitBarewordDoubleColon]
+[ValuesAndExpressions::ProhibitDuplicateHashKeys]
+[ValuesAndExpressions::ProhibitEmptyCommas]
+#[ValuesAndExpressions::ProhibitFiletest_f]
+[ValuesAndExpressions::ProhibitNullStatements]
+[ValuesAndExpressions::ProhibitUnknownBackslash]
+[ValuesAndExpressions::RequireNumericVersion]
+[ValuesAndExpressions::UnexpandedSpecialLiteral]
+
