@@ -176,6 +176,27 @@ x_BuiltWith:
     Moose: '2.2006'
     Path::Tiny: '0.104'
     Perl::Critic: '1.130'
+    Perl::Critic::Policy::CodeLayout::ProhibitFatCommaNewline: '94'
+    Perl::Critic::Policy::CodeLayout::ProhibitIfIfSameLine: '94'
+    Perl::Critic::Policy::CodeLayout::RequireFinalSemicolon: '94'
+    Perl::Critic::Policy::Compatibility::ConstantLeadingUnderscore: '94'
+    Perl::Critic::Policy::Compatibility::ConstantPragmaHash: '94'
+    Perl::Critic::Policy::Compatibility::Gtk2Constants: '94'
+    Perl::Critic::Policy::Compatibility::PerlMinimumVersionAndWhy: '94'
+    Perl::Critic::Policy::Compatibility::ProhibitUnixDevNull: '94'
+    Perl::Critic::Policy::Documentation::ProhibitAdjacentLinks: '94'
+    Perl::Critic::Policy::Documentation::ProhibitBadAproposMarkup: '94'
+    Perl::Critic::Policy::Documentation::ProhibitDuplicateHeadings: '94'
+    Perl::Critic::Policy::Documentation::ProhibitDuplicateSeeAlso: '94'
+    Perl::Critic::Policy::Documentation::ProhibitLinkToSelf: '94'
+    Perl::Critic::Policy::Documentation::ProhibitParagraphEndComma: '94'
+    Perl::Critic::Policy::Documentation::ProhibitParagraphTwoDots: '94'
+    Perl::Critic::Policy::Documentation::ProhibitUnbalancedParens: '94'
+    Perl::Critic::Policy::Documentation::ProhibitVerbatimMarkup: '94'
+    Perl::Critic::Policy::Documentation::RequireEndBeforeLastPod: '94'
+    Perl::Critic::Policy::Documentation::RequireFilenameMarkup: '94'
+    Perl::Critic::Policy::Documentation::RequireFinalCut: '94'
+    Perl::Critic::Policy::Documentation::RequireLinkedURLs: '94'
     Perl::Critic::Policy::Freenode::AmpersandSubCalls: '0.024'
     Perl::Critic::Policy::Freenode::ArrayAssignAref: '0.024'
     Perl::Critic::Policy::Freenode::BarewordFilehandles: '0.024'
@@ -197,7 +218,12 @@ x_BuiltWith:
     Perl::Critic::Policy::Freenode::Wantarray: '0.024'
     Perl::Critic::Policy::Freenode::WarningsSwitch: '0.024'
     Perl::Critic::Policy::Freenode::WhileDiamondDefaultAssignment: '0.024'
+    Perl::Critic::Policy::Miscellanea::TextDomainPlaceholders: '94'
+    Perl::Critic::Policy::Miscellanea::TextDomainUnused: '94'
     Perl::Critic::Policy::Modules::PerlMinimumVersion: '1.003'
+    Perl::Critic::Policy::Modules::ProhibitModuleShebang: '94'
+    Perl::Critic::Policy::Modules::ProhibitPOSIXimport: '94'
+    Perl::Critic::Policy::Modules::ProhibitUseQuotedVersion: '94'
     Perl::Critic::Policy::Modules::RequirePerlVersion: '1.003'
     Perl::Critic::Policy::Moose::ProhibitDESTROYMethod: '1.05'
     Perl::Critic::Policy::Moose::ProhibitLazyBuild: '1.05'
@@ -205,6 +231,16 @@ x_BuiltWith:
     Perl::Critic::Policy::Moose::ProhibitNewMethod: '1.05'
     Perl::Critic::Policy::Moose::RequireCleanNamespace: '1.05'
     Perl::Critic::Policy::Moose::RequireMakeImmutable: '1.05'
+    Perl::Critic::Policy::ValuesAndExpressions::ConstantBeforeLt: '94'
+    Perl::Critic::Policy::ValuesAndExpressions::NotWithCompare: '94'
+    Perl::Critic::Policy::ValuesAndExpressions::ProhibitArrayAssignAref: '94'
+    Perl::Critic::Policy::ValuesAndExpressions::ProhibitBarewordDoubleColon: '94'
+    Perl::Critic::Policy::ValuesAndExpressions::ProhibitDuplicateHashKeys: '94'
+    Perl::Critic::Policy::ValuesAndExpressions::ProhibitEmptyCommas: '94'
+    Perl::Critic::Policy::ValuesAndExpressions::ProhibitNullStatements: '94'
+    Perl::Critic::Policy::ValuesAndExpressions::ProhibitUnknownBackslash: '94'
+    Perl::Critic::Policy::ValuesAndExpressions::RequireNumericVersion: '94'
+    Perl::Critic::Policy::ValuesAndExpressions::UnexpandedSpecialLiteral: '94'
     Perl::Critic::Utils: '1.130'
     Pod::Wordlist: '1.20'
     Test::CPAN::Changes: '0.400002'
