@@ -81,6 +81,27 @@ on 'configure' => sub {
 
 on 'develop' => sub {
   requires "Perl::Critic" => "1.130";
+  requires "Perl::Critic::Policy::CodeLayout::ProhibitFatCommaNewline" => "94";
+  requires "Perl::Critic::Policy::CodeLayout::ProhibitIfIfSameLine" => "94";
+  requires "Perl::Critic::Policy::CodeLayout::RequireFinalSemicolon" => "94";
+  requires "Perl::Critic::Policy::Compatibility::ConstantLeadingUnderscore" => "94";
+  requires "Perl::Critic::Policy::Compatibility::ConstantPragmaHash" => "94";
+  requires "Perl::Critic::Policy::Compatibility::Gtk2Constants" => "94";
+  requires "Perl::Critic::Policy::Compatibility::PerlMinimumVersionAndWhy" => "94";
+  requires "Perl::Critic::Policy::Compatibility::ProhibitUnixDevNull" => "94";
+  requires "Perl::Critic::Policy::Documentation::ProhibitAdjacentLinks" => "94";
+  requires "Perl::Critic::Policy::Documentation::ProhibitBadAproposMarkup" => "94";
+  requires "Perl::Critic::Policy::Documentation::ProhibitDuplicateHeadings" => "94";
+  requires "Perl::Critic::Policy::Documentation::ProhibitDuplicateSeeAlso" => "94";
+  requires "Perl::Critic::Policy::Documentation::ProhibitLinkToSelf" => "94";
+  requires "Perl::Critic::Policy::Documentation::ProhibitParagraphEndComma" => "94";
+  requires "Perl::Critic::Policy::Documentation::ProhibitParagraphTwoDots" => "94";
+  requires "Perl::Critic::Policy::Documentation::ProhibitUnbalancedParens" => "94";
+  requires "Perl::Critic::Policy::Documentation::ProhibitVerbatimMarkup" => "94";
+  requires "Perl::Critic::Policy::Documentation::RequireEndBeforeLastPod" => "94";
+  requires "Perl::Critic::Policy::Documentation::RequireFilenameMarkup" => "94";
+  requires "Perl::Critic::Policy::Documentation::RequireFinalCut" => "94";
+  requires "Perl::Critic::Policy::Documentation::RequireLinkedURLs" => "94";
   requires "Perl::Critic::Policy::Freenode::AmpersandSubCalls" => "0.024";
   requires "Perl::Critic::Policy::Freenode::ArrayAssignAref" => "0.024";
   requires "Perl::Critic::Policy::Freenode::BarewordFilehandles" => "0.024";
@@ -102,7 +123,12 @@ on 'develop' => sub {
   requires "Perl::Critic::Policy::Freenode::Wantarray" => "0.024";
   requires "Perl::Critic::Policy::Freenode::WarningsSwitch" => "0.024";
   requires "Perl::Critic::Policy::Freenode::WhileDiamondDefaultAssignment" => "0.024";
+  requires "Perl::Critic::Policy::Miscellanea::TextDomainPlaceholders" => "94";
+  requires "Perl::Critic::Policy::Miscellanea::TextDomainUnused" => "94";
   requires "Perl::Critic::Policy::Modules::PerlMinimumVersion" => "1.003";
+  requires "Perl::Critic::Policy::Modules::ProhibitModuleShebang" => "94";
+  requires "Perl::Critic::Policy::Modules::ProhibitPOSIXimport" => "94";
+  requires "Perl::Critic::Policy::Modules::ProhibitUseQuotedVersion" => "94";
   requires "Perl::Critic::Policy::Modules::RequirePerlVersion" => "1.003";
   requires "Perl::Critic::Policy::Moose::ProhibitDESTROYMethod" => "1.05";
   requires "Perl::Critic::Policy::Moose::ProhibitLazyBuild" => "1.05";
@@ -110,6 +136,16 @@ on 'develop' => sub {
   requires "Perl::Critic::Policy::Moose::ProhibitNewMethod" => "1.05";
   requires "Perl::Critic::Policy::Moose::RequireCleanNamespace" => "1.05";
   requires "Perl::Critic::Policy::Moose::RequireMakeImmutable" => "1.05";
+  requires "Perl::Critic::Policy::ValuesAndExpressions::ConstantBeforeLt" => "94";
+  requires "Perl::Critic::Policy::ValuesAndExpressions::NotWithCompare" => "94";
+  requires "Perl::Critic::Policy::ValuesAndExpressions::ProhibitArrayAssignAref" => "94";
+  requires "Perl::Critic::Policy::ValuesAndExpressions::ProhibitBarewordDoubleColon" => "94";
+  requires "Perl::Critic::Policy::ValuesAndExpressions::ProhibitDuplicateHashKeys" => "94";
+  requires "Perl::Critic::Policy::ValuesAndExpressions::ProhibitEmptyCommas" => "94";
+  requires "Perl::Critic::Policy::ValuesAndExpressions::ProhibitNullStatements" => "94";
+  requires "Perl::Critic::Policy::ValuesAndExpressions::ProhibitUnknownBackslash" => "94";
+  requires "Perl::Critic::Policy::ValuesAndExpressions::RequireNumericVersion" => "94";
+  requires "Perl::Critic::Policy::ValuesAndExpressions::UnexpandedSpecialLiteral" => "94";
   requires "Perl::Critic::Utils" => "0";
   requires "Pod::Wordlist" => "0";
   requires "Test::CPAN::Changes" => "0";
