@@ -2,6 +2,7 @@ Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS
 
 {{$NEXT}}
 
+  - Added Perl::Critic::Pulp policies
   - Added Modules::PerlMinimumVersion and Modules::RequirePerlVersion from
     Perl::Critic::More
   - Add disabled policies to generated .perlcriticrc
